--- a/src/templates/creature/main.hbs
+++ b/src/templates/creature/main.hbs
@@ -100,7 +100,7 @@
     <aside class="description">
       <h1>{{localize "ZWEI.actor.navigation.description"}}</h1>
       <textarea spellcheck="false" name="{{zhLocalizePath "system.description"}}"
-        placeholder="Put a nice description of your creature here...">{{zhLocalize system.description}}</textarea>
+        placeholder="{{localize 'ZWEI.actor.details.placeholders.creaturedescription'}}">{{zhLocalize system.description}}</textarea>
     </aside>
   </section>
 {{/unless}}
